--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "prisma generate", 
     "build": "echo 'Building backend...' && prisma migrate deploy", 
-    "migrate": "prisma migrate deploy"
+    "migrate": "prisma migrate deploy",
+    "postbuild": "npm run migrate"
   },
   "keywords": [],
   "author": "",
