seems to be final

--- a/vercel.json
+++ b/vercel.json
@@ -27,8 +27,8 @@
     "JWT_SECRET": "QJMAEhcrscsU5GZHzwA6FQthPaKkpa9QhjU7G3V9wN8",
     "JWT_EXP": "1h",
     "REFRESH_JWT_EXP": "7d",
-    "CORS_ORIGIN": "https://your-frontend-app.vercel.app,http://localhost:3000",
-    "VITE_BACKEND_URL": "https://your-backend-app.vercel.app/api",
-    "VITE_WEBSOCKET_URL": "wss://your-backend-app.vercel.app"
+    "CORS_ORIGIN": "https://rfid-attendance-system-sigma.vercel.app,http://localhost:3000",
+    "VITE_BACKEND_URL": "https://rfid-attendance-system-sigma.vercel.app/api",
+    "VITE_WEBSOCKET_URL": "wss://rfid-attendance-system-sigma.vercel.app"
   }
 }
