--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
   "builds": [
     {
-      "src": "backend/", 
+      "src": "backend/package.json", 
       "use": "@vercel/node"
     },
     {
-      "src": "frontend/", 
+      "src": "frontend/package.json", 
       "use": "@vercel/static-build",
       "config": {
         "distDir": "dist"
