--- a/vercel.json
+++ b/vercel.json
@@ -28,7 +28,7 @@
     "JWT_EXP": "1h",
     "REFRESH_JWT_EXP": "7d",
     "CORS_ORIGIN": "https://rfid-attendance-system-sigma.vercel.app,http://localhost:3000",
-    "VITE_BACKEND_URL": "https://rfid-attendance-system-sigma.vercel.app/",
+    "VITE_BACKEND_URL": "https://rfid-attendance-system-sigma.vercel.app",
     "VITE_WEBSOCKET_URL": "wss://rfid-attendance-system-sigma.vercel.app"
   }
 }
