--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "backend/src/app.js"
+      "dest": "backend/$1"
     },
     {
       "src": "/(.*)",
