--- a/vercel.json
+++ b/vercel.json
@@ -23,12 +23,12 @@
     }
   ],
   "env": {
-"DATABASE_URL":"postgresql://neondb_owner:npg_U0l3HDkVufya@ep-divine-brook-a1j88z5d-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require",
+"DATABASE_URL":"postgresql://postgres.rzttbyqibwerfxdthhxc:Nas-1-Vips-2-Management@aws-0-ap-south-1.pooler.supabase.com:6543/postgres",
     "JWT_SECRET": "QJMAEhcrscsU5GZHzwA6FQthPaKkpa9QhjU7G3V9wN8",
     "JWT_EXP": "1h",
     "REFRESH_JWT_EXP": "7d",
     "CORS_ORIGIN": "https://rfid-attendance-system-sigma.vercel.app,http://localhost:3000,http://localhost:8000",
     "VITE_BACKEND_URL": "https://rfid-attendance-system-sigma.vercel.app",
     "VITE_WEBSOCKET_URL": "wss://rfid-attendance-system-sigma.vercel.app"
-  }
+  } 
 }
