--- a/backend/package.json
+++ b/backend/package.json
@@ -8,10 +8,7 @@
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "prisma generate", 
-    "build": "echo 'Building backend...' && prisma migrate deploy", 
-    "migrate": "prisma migrate deploy",
-    "postbuild": "npm run migrate"
+    "postinstall": "npm install && prisma generate"
   },
   "keywords": [],
   "author": "",
