--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npm install && prisma generate"
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
