--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,8 @@
     "morgan": "^1.10.0",
     "pg": "^8.12.0",
     "prisma": "^6.12.0",
-    "ws": "^8.17.0"
+    "ws": "^8.17.0",
+     "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
